added signout and email verification