@@ -1,8 +1,10 @@
 package hazardhub.com.hub.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -23,7 +25,11 @@ public class SecurityConfig {
         @Autowired(required = false)
         private FirebaseAuthFilter firebaseAuthFilter;
 
+        @Value("${app.cors.allowed-origins:https://localhost:3000}")
+        private String allowedOrigins;
+
         @Bean
+        @Order(Integer.MAX_VALUE) // Must be last - this is the catch-all chain
         public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
                 http
                                 .csrf(AbstractHttpConfigurer::disable)
@@ -33,28 +39,17 @@ public class SecurityConfig {
                                 .authorizeHttpRequests(auth -> auth
                                                 // Public endpoints - no authentication required
                                                 .requestMatchers(
-                                                        "/api/v1/auth/register",
-                                                        "/api/v1/auth/login",
-                                                        "/api/health",
-                                                        "/swagger-ui/**",
-                                                        "/swagger-ui.html",
-                                                        "/v3/api-docs/**",
-                                                        "/v3/api-docs.yaml",
-                                                        "/swagger-resources/**",
-                                                        "/webjars/**",
-                                                        "/h2-console/**"
-                                                ).permitAll()
+                                                                "/api/v1/auth/register",
+                                                                "/api/v1/auth/login",
+                                                                "/api/health")
+                                                .permitAll()
                                                 // All other endpoints require authentication
-                                                .anyRequest().authenticated()
-                                );
+                                                .anyRequest().authenticated());
 
                 // Add Firebase auth filter for protected endpoints
                 if (firebaseAuthFilter != null) {
                         http.addFilterBefore(firebaseAuthFilter, UsernamePasswordAuthenticationFilter.class);
                 }
-
-                // Allow H2 console frames
-                http.headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
 
                 return http.build();
         }
@@ -62,10 +57,12 @@ public class SecurityConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("*"));
+                List<String> origins = Arrays.asList(allowedOrigins.split(","));
+                configuration.setAllowedOrigins(origins);
                 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                 configuration.setAllowedHeaders(List.of("*"));
                 configuration.setExposedHeaders(List.of("Authorization"));
+                configuration.setAllowCredentials(true);
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
